feat(lab) add nodejs

--- a/nginx-3267/overlays/lab/lab.values.yaml
+++ b/nginx-3267/overlays/lab/lab.values.yaml
@@ -2,3 +2,8 @@ web:
   image:
     repository: ghcr.io/104corp/bitnami/nginx
     tag: 1.24.0
+extraContainers:
+  - name: nodejs
+    image:
+      repository: ghcr.io/104corp/nodejs
+      tag: v1
