feat(lab) add nodejs

--- a/nginx-3267/overlays/lab/lab.values.yaml
+++ b/nginx-3267/overlays/lab/lab.values.yaml
@@ -18,3 +18,9 @@ web:
     - containerPort: 8000
       protocol: TCP
       name: nginx
+  service:
+    ports:
+    - port: 80
+      targetPort: nginx
+      protocol: TCP
+      name: http
