feat(lab) add nodejs

--- a/nginx-3267/overlays/lab/lab.values.yaml
+++ b/nginx-3267/overlays/lab/lab.values.yaml
@@ -38,3 +38,6 @@ web:
         httpGet:
           path: /
           port: 8081
+    - name: busybox
+      image: ghcr.io/104corp/busybox:1.35.0
+      command: ["sleep", "360000"]
