feat(lab) add nodejs

--- a/nginx-3267/overlays/lab/lab.values.yaml
+++ b/nginx-3267/overlays/lab/lab.values.yaml
@@ -38,7 +38,7 @@ web:
         httpGet:
           path: /
           port: 8081
-    - name: busybox
+    - name: network-tools
       image: 
         repository: ghcr.io/104corp/network-tools
         tag: v1
