--- a/nginx-3267/overlays/lab/lab.values.yaml
+++ b/nginx-3267/overlays/lab/lab.values.yaml
@@ -41,7 +41,9 @@ web:
               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
               proxy_set_header X-Forwarded-Proto $scheme;
           }
+          return 444;
       mountPath: /opt/bitnami/nginx/conf/bitnami/3267.conf
+  
   extraContainers:
     - name: nodejs
       image:
