--- a/apps/overlays/lab/nginx-3647.argocd.yaml
+++ b/apps/overlays/lab/nginx-3647.argocd.yaml
@@ -30,3 +30,6 @@ spec:
         path: nginx-3647
         repoURL: https://github.com/104corp/presentation-apps.git
         targetRevision: main
+      syncPolicy:
+        automated:
+          prune: true
