--- a/nginx-3267/overlays/lab/lab.values.yaml
+++ b/nginx-3267/overlays/lab/lab.values.yaml
@@ -34,13 +34,13 @@ web:
             autoindex off;
             error_page 404 403 500 502 503 504 /syserr.html;
           }
-#          location /tool {
-#              proxy_pass http://127.0.0.1:8081;
-#              proxy_set_header Host $host;
-#              proxy_set_header X-Real-IP $remote_addr;
-#              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#              proxy_set_header X-Forwarded-Proto $scheme;
-#          }
+          location /tool {
+              proxy_pass http://127.0.0.1:8081;
+              proxy_set_header Host $host;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header X-Forwarded-Proto $scheme;
+          }
       mountPath: /opt/bitnami/nginx/conf/bitnami/3267.conf
   
   extraContainers:
