--- a/nginx-3633/overlays/lab/lab.values.yaml
+++ b/nginx-3633/overlays/lab/lab.values.yaml
@@ -40,6 +40,7 @@ web:
               proxy_set_header X-Real-IP $remote_addr;
               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
               proxy_set_header X-Forwarded-Proto $scheme;
+	      johhhhhh	
           }
       mountPath: /opt/bitnami/nginx/conf/bitnami/3267.conf
   
