--- a/nginx-3267/overlays/lab/lab.values.yaml
+++ b/nginx-3267/overlays/lab/lab.values.yaml
@@ -29,11 +29,11 @@ web:
           listen *:8080;
           server_name nginx-3267.104-dev.com.tw;
           index  index.html index.htm index.php;
-          location / {
-            index     index.html index.htm index.php;
-            autoindex off;
-            error_page 404 403 500 502 503 504 /syserr.html;
-          }
+ #         location / {
+ ##           index     index.html index.htm index.php;
+  #          autoindex off;
+  #          error_page 404 403 500 502 503 504 /syserr.html;
+  #        }
           location /tool {
               proxy_pass http://127.0.0.1:8081;
               proxy_set_header Host $host;
