--- a/nginx-3500/overlays/lab/lab.values.yaml
+++ b/nginx-3500/overlays/lab/lab.values.yaml
@@ -34,7 +34,7 @@ web:
             autoindex off;
             error_page 404 403 500 502 503 504 /syserr.html;
           }
-#          location /tool {
+##          location /tool {
 #              proxy_pass http://127.0.0.1:8081;
 #              proxy_set_header Host $host;
 #              proxy_set_header X-Real-IP $remote_addr;
