--- a/nginx-3633/overlays/lab/lab.values.yaml
+++ b/nginx-3633/overlays/lab/lab.values.yaml
@@ -41,6 +41,14 @@ web:
               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
               proxy_set_header X-Forwarded-Proto $scheme;	
           }
+          }
+          location /johnny {
+              proxy_pass http://127.0.0.1:8081;
+              proxy_set_header Host $host;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header X-Forwarded-Proto $scheme;
+          }
       mountPath: /opt/bitnami/nginx/conf/bitnami/3267.conf
   
   extraContainers:
