--- a/nginx-3267/overlays/lab/lab.values.yaml
+++ b/nginx-3267/overlays/lab/lab.values.yaml
@@ -18,6 +18,10 @@ web:
           include       mime.types;
           default_type  application/octet-stream;
           include  "/opt/bitnami/nginx/conf/server_blocks/*.conf";
+          upstream backend {
+            server 10.42.196.68:8080;
+            server 10.42.5.37:8080;
+          }
         # HTTP Server
           server {
             include  "/opt/bitnami/nginx/conf/bitnami/*.conf";
@@ -35,7 +39,7 @@ web:
             error_page 404 403 500 502 503 504 /syserr.html;
           }
           location /tool {
-              proxy_pass http://127.0.0.1:8081;
+              proxy_pass http://backend;
               proxy_set_header Host $host;
               proxy_set_header X-Real-IP $remote_addr;
               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
