--- a/nginx-3521/overlays/lab/lab.values.yaml
+++ b/nginx-3521/overlays/lab/lab.values.yaml
@@ -26,7 +26,7 @@ web:
       mountPath: /opt/bitnami/nginx/conf/nginx.conf
     - name: 3267.conf
       value: |
-          listen *:8082;
+          listen *:8080;
           server_name nginx-3521.104-dev.com.tw;
           index  index.html index.htm index.php;
           location / {
@@ -35,6 +35,13 @@ web:
             error_page 404 403 500 502 503 504 /syserr.html;
           }
           location /tool {
+              proxy_pass http://127.0.0.1:8081;
+              proxy_set_header Host $host;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header X-Forwarded-Proto $scheme;
+          }
+          location /feihan {
               proxy_pass http://127.0.0.1:8081;
               proxy_set_header Host $host;
               proxy_set_header X-Real-IP $remote_addr;
