--- a/nginx-3306/overlays/lab/lab.values.yaml
+++ b/nginx-3306/overlays/lab/lab.values.yaml
@@ -18,6 +18,9 @@ web:
           include       mime.types;
           default_type  application/octet-stream;
           include  "/opt/bitnami/nginx/conf/server_blocks/*.conf";
+          upstream backend {
+            server lab-lab-nginx-3306-web.l-presentation-nginx-3306.svc.cluster.local/tool;
+          }
         # HTTP Server
           server {
             include  "/opt/bitnami/nginx/conf/bitnami/*.conf";
@@ -35,11 +38,11 @@ web:
             error_page 404 403 500 502 503 504 /syserr.html;
           }
           location /tool {
-              # proxy_pass http://127.0.0.1:8081;
-              # proxy_set_header Host $host;
-              # proxy_set_header X-Real-IP $remote_addr;
-              # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-              # proxy_set_header X-Forwarded-Proto $scheme;
+              proxy_pass http://backend;
+              proxy_set_header Host $host;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header X-Forwarded-Proto $scheme;
           }
       mountPath: /opt/bitnami/nginx/conf/bitnami/3306.conf
   
